Describe : for preventing backtracking

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -390,11 +390,20 @@ You can attach a C<?> modifier to the quantifier to enable frugal
 matching:
 
 =begin code
-    'abababa' ~~ /a .* a/ && say ~$/;  # abababa
     'abababa' ~~ /a .*? a/ && say ~$/; # aba
 =end code
 
 You can also explicitly request greedy matching with the C<!> modifier.
+
+=head2 X<Preventing backtracking: :>
+
+You can prevent backtracking in regexes by attaching a C<:> modifier
+to the quantifier:
+
+=begin code
+    say so 'abababa' ~~ /a .* aba/   # True
+    say so 'abababa' ~~ /a .*: aba/  # False
+=end code
 
 =head1 X<Alternation|regex,||>
 
