Fix the index entries for frugal and backtracking

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -378,7 +378,7 @@ occur between each of the matches.  So, for example C<a+ % ','> will match
 C<a> or C<a,a> or C<a,a,a> or so on, but it will not match C<a,> or C<a,a,>.
 To match those as well, you may use C<%%> instead of C<%>.
 
-=head2 X<Greedy versus frugal quantifiers: ! and ?>
+=head2 X<Greedy versus frugal quantifiers: ?|regex,?>
 
 By default, quantifiers request a greedy match:
 
@@ -395,7 +395,7 @@ matching:
 
 You can also explicitly request greedy matching with the C<!> modifier.
 
-=head2 X<Preventing backtracking: :>
+=head2 X<Preventing backtracking: :|regex,:>
 
 You can prevent backtracking in regexes by attaching a C<:> modifier
 to the quantifier:
