--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -354,8 +354,8 @@ is possible: C<a ** 5> matches C<a> exactly five times.
 It is also possible to use non inclusive ranges using a caret:
 
 =begin code
-    say so 'a' ~~ /a ** 1^..^6;       # False
-    say so 'aaaa' ~~ /a ** 1^..^6;    # True
+    say so 'a'    ~~ /a ** 1^..^6/;   # False
+    say so 'aaaa' ~~ /a ** 1^..^6/;   # True
 =end code
 
 This includes the numeric ranges starting from 0:
