Fix typo in functions.pod

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -105,7 +105,7 @@ L<documentation on the C<Signature> class|Signature>.
 
 =head2 Arguments
 
-Arguments are supplied as a comma separated list. To disambugiate nested calls
+Arguments are supplied as a comma separated list. To disambiguate nested calls
 parentheses or adverbial form can be used.
 
     sub f(&c){ c() * 2 }; # call the function reference c with empty parameter list
