--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -56,12 +56,12 @@ traditional way (although you can) to do a filetest. You can simply append
 C<.IO> to the filename. For instance, here is how to check if a file is
 readable using smart match:
 
-    C<'/path/to/file'.IO ~~ :r>
+    '/path/to/file'.IO ~~ :r
 
 You can, of course, use an already opened filehandle. Here, using the file
 handle C<$fh>, is an example, using the method syntax for the file test:
 
-    C<$fh.r>
+    $fh.r
 
 Most of the former filetests have colon equivalents for use with smart match:
 
@@ -79,9 +79,9 @@ All of these tests can be used as methods (without the colon).
 
 Three tests, however, I<only> have method equivalents:
 
-    C<-M $fh> => C<$fh.modified>
-    C<-A $fh> => C<$fh.accessed>
-    C<-C $fh> => C<$fh.changed>
+    $fh.modified; # -M $fh
+    $fh.accessed; # -A $fh
+    $fh.changed;  # -C $fh
 
 The remaining filetests in Perl 5 do not appear to be implemented
 in Perl 6.
@@ -130,8 +130,8 @@ find a true analog.
 Available as a function as well as being able to be used as a method.
 For instance, these are equivalent:
 
-    C<atan2(100)>
-    C<100.atan2>
+    atan2(100);
+    100.atan2;
 
 =head2 bind
 
@@ -229,8 +229,8 @@ Similar to the Perl 5 version, coerces the target to an integer, and uses that
 as a Unicode code point to return the relevant character. Can be used as a
 function and a method:
 
-    C<chr(65); # "A">
-    C<65.chr;  # "A">
+    chr(65); # "A"
+    65.chr;  # "A"
 
 =head2 chroot
 
@@ -389,8 +389,8 @@ shell($command);>
 
 In Perl 6, this is not a function, but an adverb:
 
-    C<%hash{$key}:exists;>
-    C<@array[$i]:exists;>
+    %hash{$key}:exists;
+    @array[$i]:exists;
 
 =head2 exit
 
@@ -881,9 +881,9 @@ deals with newlines. Details at L<https://doc.perl6.org/routine/open>.
 
 Not a builtin function in Perl 6. You would use the IO::Path class:
 
-    C<my $dir = IO::Path.new("directory")>
+    my $dir = IO::Path.new("directory");
 
-    C<my $dir = "directory".IO; # Same, but probably more direct>
+    my $dir = "directory".IO; # Same, but probably more direct
 
 =head2 ord
 
@@ -1015,9 +1015,9 @@ L<append method|/type/Array#method_append>.
 
 These survive the transition to Perl 6. Some notes:
 
-    C<q/.../> is still equivalent to using single quotes.
-    C<qq/.../> is still equivalent to using double quotes.
-    C<qw/.../> is more commonly rendered as C<< <...> >> in Perl 6.
+    q/.../ # is still equivalent to using single quotes.
+    qq/.../ # is still equivalent to using double quotes.
+    qw/.../ # is more commonly rendered as C<< <...> >> in Perl 6.
 
 There are some added quoting constructs and equivalents, as explained at
 L<https://doc.perl6.org/language/quoting>.
@@ -1370,6 +1370,7 @@ described above.
 
 Works as in Perl 5. The formats currently available are:
 
+=table
     %   a literal percent sign
     c   a character with the given codepoint
     s   a string
@@ -1386,6 +1387,7 @@ Works as in Perl 5. The formats currently available are:
 
 Compatibility:
 
+=table
     i   a synonym for %d
     D   a synonym for %ld
     U   a synonym for %lu
@@ -1394,17 +1396,19 @@ Compatibility:
 
 Perl 5 (non-)compatibility:
 
+=table
     n   produces a runtime exception
     p   produces a runtime exception
 
 There are modifiers for integers, but they're mainly no-ops, as the
 semantics aren't settled:
 
-    h  interpret integer as native "short" (typically int16)
-    l  interpret integer as native "long" (typically int32 or int64)
-    ll interpret integer as native "long long" (typically int64)
-    L  interpret integer as native "long long" (typically uint64)
-    q  interpret integer as native "quads" (typically int64 or larger)
+=table
+    h   interpret integer as native "short" (typically int16)
+    l   interpret integer as native "long" (typically int32 or int64)
+    ll  interpret integer as native "long long" (typically int64)
+    L   interpret integer as native "long long" (typically uint64)
+    q   interpret integer as native "quads" (typically int64 or larger)
 
 =head2 sqrt
 
