5to6-perlfunc: fix typo

--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -316,7 +316,7 @@ C<my $deleted_value = @array[$i]:delete;>.
 
 Works similarly to the Perl 5 version, but Perl 6's Exception mechanism
 may give you more power and flexibility than is available in Perl 5.
-See L<https://doc.perl6.org/language/exceptions>. To prevent the stacktrace
+See L<https://doc.perl6.org/language/exceptions>. To omit the stacktrace
 and location, like Perl 5's C<die "...\n">, use:
 
     note "...";
