operators: fix typo in comment

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -1989,7 +1989,7 @@ functions.
     my @result
         <== sort()
         <== grep({ /<[PE]>/ })
-        <== my @caps # unlike <==, there is no need for additional statement
+        <== my @caps # unlike ==>, there is no need for additional statement
         <== map({ .tc })
         <== <people of earth>;
 
