nativecall: consistently use { * } as function body

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -228,7 +228,7 @@ Getting return values for arrays works out just the same.
 Some library APIs may take an array as a buffer that will be populated by the
 C function and, for, instance, return the actual number of items populated:
 
-    sub get_n_ints(CArray[int32], int32) returns int32 is native('ints');
+    sub get_n_ints(CArray[int32], int32) returns int32 is native('ints') { * }
 
 In these cases it is important that the CArray has at least the number of
 elements that are going to be populated before passing it to the native
@@ -435,8 +435,8 @@ to print the home directory of the current user:
         has Str $.pw_dir;
         has Str $.pw_shell;
     }
-    sub getuid()              returns uint32   is native(Str) {};
-    sub getpwuid(uint32 $uid) returns PwStruct is native(Str) {};
+    sub getuid()              returns uint32   is native(Str) { * };
+    sub getpwuid(uint32 $uid) returns PwStruct is native(Str) { * };
 
     say getpwuid(getuid()).pw_dir;
 
