nativecall: fix typos

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -86,7 +86,7 @@ Note that the lack of a C<returns> trait is used to indicate void return type.
 Do I<not> use the 'void' type anywhere except in the Pointer parameterization.
 
 For strings, there is an additional "encoded" trait to give some extra hints on
-how to do the marshalling.
+how to do the marshaling.
 
     sub message_box(Str is encoded('utf8')) is native('gui') { * }
 
@@ -268,7 +268,7 @@ quick use of the "repr" trait:
         has num64 $.y;
     }
 
-The attributes can only be of the types that NativeCall knows how to marshall into
+The attributes can only be of the types that NativeCall knows how to marshal into
 struct fields. Currently, structs can contain machine-sized integers, doubles,
 strings, and other NativeCall objects (CArrays, and those using the CPointer and
 CStruct reprs). Other than that, you can do the usual set of things you would with
@@ -334,9 +334,9 @@ You can type your C<Pointer> with passing the type as parameter. It works with n
 but also C<CArray> and C<CStruct> defined type. NativeCall will not implicitly alloc the memory for it
 even when calling new on them.
 It's mostly useful in the case of a C routine returning a pointer, or if it's a pointer
-embeded in a C<CStruct>.
+embedded in a C<CStruct>.
 
-You have to call C<.deref> on it to access the embeded type.
+You have to call C<.deref> on it to access the embedded type.
 
     my Pointer[int32] $p; #For a pointer on int32;
     my Pointer[MyCstruct] $p2 = some_c_routine();
@@ -371,7 +371,7 @@ to callbacks.
 
 TBD more
 
-The C<native> trait accept a simple lib name or a full path.
+The C<native> trait accepts the library name or the full path.
 
     constant LIBMYSQL = 'mysqlclient';
     constant LIBFOO = '/usr/lib/libfoo.so.1';
@@ -409,7 +409,7 @@ version or just a part of it (Try to stick to Major version, some BSD does not c
 
 =head2 Routine
 
-the C<native> trait also accept a C<Callable> as argument, allowing you to provide your
+The C<native> trait also accepts a C<Callable> as argument, allowing you to provide your
 own way to handle the way it will find the library file to load.
 
     sub foo is native(sub {'libfoo.so.42'});
@@ -457,14 +457,14 @@ exported by the "libc.so.6" library.
 
 =head1 C++ Support
 
-NativeCall offer a support to use class and method  from C++ as show in
-L<https://github.com/rakudo/rakudo/blob/nom/t/04-nativecall/13-cpp-mangling.t> (and it associated cpp file)
+NativeCall offers support to use classes and methods from C++ as shown in
+L<https://github.com/rakudo/rakudo/blob/nom/t/04-nativecall/13-cpp-mangling.t> (and its associated C++ file).
 Note that at the moment it's not as tested and developed as C support.
 
 =head1 Examples
 
 The L<zavolaj|https://github.com/jnthn/zavolaj> git repository (where NativeCall was
-originaly developed) hosts L<various examples|https://github.com/jnthn/zavolaj/tree/master/examples>
+originally developed) hosts L<various examples|https://github.com/jnthn/zavolaj/tree/master/examples>
 of how to use NativeCall.
 
 More examples can be found L<in the DBIsh repository
