we can call subs and blocks in place

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -68,7 +68,7 @@ Subroutines don't have to be named; in this case they're called anonymous.
     say sub ($a, $b) { $a ** 2 + $b ** 2 }(3, 4) # 25
 
 But in this case, it's often desirable to use the more succinct L<block|Block>
-syntax.
+syntax. Subroutines and blocks can be called in place, as in the example above.
 
 =head2 X«Blocks and Lambdas|syntax,->»
 
