doc intended ignorance of additional named args for methods

--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -248,6 +248,10 @@ declared in this class. The latter is really a method call and thus it may
 be overridden in a subclass. Only use C<$.origin> if you explicitly want to
 allow overriding.
 
+Unlike Subroutines, additional named arguments will not produce compile time or
+runtime errors. That allows chaining of methods via
+L<Re-dispatching|/language/functions#Re-dispatching>
+
 =head2 self
 
 Inside a method, the term C<self> is available, which is bound to the
