indexify nextsame and friends

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -644,7 +644,7 @@ a 1;        # Int 1\n Any 1
 =end code
 
 As mentioned earlier, multi subs are not the only situation in which
-C<callwith>, C<callsame>, C<nextwith> and C<nextsame> can be helpful.
+C<I<callwith>>, C<I<callsame>>, C<I<nextwith>> and C<I<nextsame>> can be helpful.
 One is is for dispatching to wrapped routines:
 
 =begin code
