--- a/Type/Any.pod
+++ b/Type/Any.pod
@@ -146,6 +146,18 @@ Examples:
     say 'bca'.comb.sort({$^b cmp $^a}).join;    # cba
     say '231'.comb.sort(&infix:«<=>»).join;     # 123
 
+=head2 method map
+
+Defined as:
+
+    proto method map(|) is nodal { * }
+    multi method map(\SELF: &block;; :$label, :$item)
+    multi method map(HyperIterable:D: &block;; :$label)
+
+C<map> will iterate over the invocant and apply the number of positional
+parameters of the code object from the invocant per call. The returned values
+of the code object will become elements of the returned C<Seq>.
+
 =head2 method flat
 
 Interprets the invocant as a list, flattens it, and returns that list. Please
