--- a/Language/typesystem.pod
+++ b/Language/typesystem.pod
@@ -38,6 +38,12 @@ TODO
 
 =head2 C<subset>
 
-TODO
+A C<I<subset>> declares a new type that will re-dispatch to it's base type. If a
+C<where> clause is supplied any assignment will be checked against the given
+code object.
+
+    subset Positive of Int where * > -1; 
+    my Positive $i = 1;
+    $i = -42; # OUTPUT«Type check failed in assignment to $i; expected Positive but got Int (-42)␤ …»
 
 =end pod
