--- a/Language/typesystem.pod
+++ b/Language/typesystem.pod
@@ -38,7 +38,7 @@ TODO
 
 =head2 C<subset>
 
-A C<I<subset>> declares a new type that will re-dispatch to it's base type. If a
+A C<I<subset>> declares a new type that will re-dispatch to its base type. If a
 C<where> clause is supplied any assignment will be checked against the given
 code object.
 
