--- a/Type/Variable.pod
+++ b/Type/Variable.pod
@@ -27,7 +27,7 @@ Returns the name of the variable, including the sigil.
 
 Sets the default value with which a variable is initialized, and to which it
 is reset when Nil is assigned to it. Trait arguments are evaluated at compile
-time. Closures wont do what you expect. They are stored as is and need to be
+time. Closures won't do what you expect. They are stored as is and need to be
 called by hand.
 
     my Int $x is default(42);
