Example using EVAL needs use MONKEY-SEE-NO-EVAL

--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -539,6 +539,7 @@ to classes. Or to phrase it differently, classes are meant for managing
 instances and roles are meant for managing behavior and code reuse.
 
     =begin code :allow<B L>
+    use MONKEY-SEE-NO-EVAL;
     role Serializable {
         method serialize() {
             self.L<perl>; # very primitive serialization
