fix remaining references to BEGIN where it should be INIT

--- a/Language/performance.pod
+++ b/Language/performance.pod
@@ -14,7 +14,7 @@ L<"critical 3%"|https://en.wikiquote.org/wiki/Donald_Knuth> by "profiling" as ex
 
 =head2 Time with C<now - INIT now>
 
-Expressions of the form C<now - BEGIN now>, where C<BEGIN> is a
+Expressions of the form C<now - INIT now>, where C<INIT> is a
 L<phase in the running of a Perl 6 program|/language/phasers>, provide a great idiom for timing code snippets.
 
 Use the C<m: your code goes here> L<#perl6 channel evalbot|http://doc.perl6.org/language/glossary#camelia>
