--- a/Language/performance.pod
+++ b/Language/performance.pod
@@ -170,7 +170,7 @@ Is there an existing high (enough) performance implementation of what you're try
 There are a lot of C libs out there.
 L<NativeCall|/language/nativecall> makes it easy to create wrappers for C libs (there's experimental
 support for C++ libs too) such as L<Gumbo|https://github.com/Skarsnik/perl6-gumbo>.
-e(Data marshalling and call handling is somewhat poorly optimized at the time of writing this but for many
+(Data marshalling and call handling is somewhat poorly optimized at the time of writing this but for many
 applications that won't matter.)
 
 Perl 5's compiler can be treated as a C lib. Mix in Perl 6 types, the L<MOP|/language/mop>, and some hairy
