--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -644,7 +644,7 @@ a 1;        # Int 1\n Any 1
 =end code
 
 As mentioned earlier, multi subs are not the only situation in which
-I<C<callwith>>, I<C<callsame>>, I<C<nextwith>> and I<C<nextsame>> can be helpful.
+X<C<callwith>|callwith>, X<C<callsame>|callsame>, X<C<nextwith>|nextwith> and X<C<nextsame>|nextsame> can be helpful.
 One is is for dispatching to wrapped routines:
 
 =begin code
