indexfy try and CATCH, fixed for #435

--- a/Language/exceptions.pod
+++ b/Language/exceptions.pod
@@ -50,7 +50,7 @@ It is possible to handle exceptional circumstances by supplying a C<CATCH> block
 Here, we are saying that if any exception of type C<X::IO> occurs, then the
 message C<some kind of IO exception was caught!> will be displayed.
 
-A C<CATCH> block uses smart matching similarly to how C<given/when> smart
+A X<C<CATCH>|CATCH> block uses smart matching similarly to how C<given/when> smart
 matches on options, thus it is possible to catch various categories of
 exceptions and handle them appropriately inside a C<when> block.
 
@@ -62,7 +62,7 @@ To handle all exceptions use a C<default> statement.
         }
    }
 
-=head1 C<try> blocks
+=head1 X<C<try>|try blocks> blocks
 
 To contain an exception use a C<try> block. Any exception that is thrown in
 such a block will be caught by the implicit C<CATCH> block or a C<CATCH> block
