change example lib name to agree with the explanatory text

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -11,7 +11,7 @@ X<|nativecall>
 The simplest imaginable use of NativeCall would look something like this:
 
     use NativeCall;
-    sub some_argless_function() is native('something') { * }
+    sub some_argless_function() is native('libsomething') { * }
     some_argless_function();
 
 The first line imports various traits and types. The next line looks like
