Clarify library name usage
Reverts #438

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -11,14 +11,14 @@ X<|nativecall>
 The simplest imaginable use of NativeCall would look something like this:
 
     use NativeCall;
-    sub some_argless_function() is native('libsomething') { * }
+    sub some_argless_function() is native('something') { * }
     some_argless_function();
 
 The first line imports various traits and types. The next line looks like
 a relatively ordinary Perl 6 sub declaration - with a twist. We use the
 "native" trait in order to specify that the sub is actually defined in a
-native library. The platform-specific extension (e.g., '.so' or '.dll') will be
-added for you.
+native library. The platform-specific extension (e.g., '.so' or '.dll'),
+as well as any customary prefixes (e.g., 'lib') will be added for you.
 
 The first time you call "some_argless_function", the "libsomething" will be
 loaded and the "some_argless_function" will be located in it. A call will then
