Lt and Lo are also valid alphabetics
Also some grammar cleanups.

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -11,9 +11,10 @@ if it is different from C<6.c>.
 
 =head1 Alphabetic Characters
 
-Please note that any codepoints that have the C<Ll> or C<Lu> property,
+Any codepoint that has the C<Ll>, C<Lu>, or C<Lt> property
 can be used just like any other alphabetic character from the ASCII range,
-like "A" or "a".
+like "A" or "a".  Any codepoint with the C<Lo> property can be used as
+an alphabetic where case distinctions do not matter.
 
 =head1 Numeric characters
 
@@ -27,8 +28,8 @@ that has the C<Zs>, C<Zl> or C<Zp> property.
 
 =head1 Numeric values
 
-Any codepoint that has the C<No> property, can be used as a numeric value,
-such as ½ and ⅓.
+Any codepoint that has the C<No> property can be used standalone as a numeric value,
+such as ½ and ⅓.  (These aren't decimal digit characters, so can't be combined.)
 
 =head1 Other acceptable codepoints
 
