fix typos, spellings, and grammar

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -379,22 +379,22 @@ The C<native> trait accepts the library name or the full path.
     sub mysql_affectied_rows( .. ) returns int32 is native(LIBMYSQL);
     sub bar is native(LIBFOO);
 
-You can also put an incomplete path like './foo', NativeCall will automatically put
-the right extension according to the plateform specification.
+You can also put an incomplete path like './foo' and NativeCall will automatically put
+the right extension according to the platform specification.
 
 BE CAREFUL: the C<native> trait and C<constant> are evaluated at compile time. Don't write a constant
-that depend on dynamic variable like:
+that depends on a dynamic variable like:
 
     constant LIBMYSQL = %*ENV<P6LIB_MYSQLCLIENT> || 'mysqlclient';
 
 This will keep the value given at compile time. A module will be precompiled and C<LIBMYSQL> will
-keep the value it get evaluated when the module get precompiled.
+keep the value it acquires when the module gets precompiled.
 
 =head2 ABI/API Version
 
 If you write C<native('foo')> NativeCall will search libfoo.so under Unix like system (libfoo.dynlib on Os X, foo.dll on win32).
 In most modern system it will require you or the user of your module to install
-the develepment package because it's recommended to always provide an API/ABI version to a
+the development package because it's recommended to always provide an API/ABI version to a
 shared library, so libfoo.so ends often being a symbolic link provided only by a devel package.
 
 To avoid that, the C<native> trait allows you to specify the API/ABI version. It can be a full
