add Heredoc and constant to doc search

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -969,7 +969,7 @@ denominator is limited to C<2**64>, after which it will automatically
 upgrade to C<Num> to preserve performance).  If you want a C<Rat> with
 an arbitrary-precision denominator, C<FatRat> is available.
 
-=head3 C<constant>
+=head3 X<C<constant>>
 
 In Perl 6, C<constant> is a declarator for variables, just like C<my>,
 except the variable is permanently locked to the result of its
