make it clear that the 'X' is not the documentable term

--- a/Language/about.pod
+++ b/Language/about.pod
@@ -82,14 +82,14 @@ Documentables may contain other documentables. Class documentables, for
 example, often contain the methods the class implements.
 
 Definitions must be in one of the following forms to be recognized as
-the start of a documentable:
+the start of a documentable named, say, Z:
 
-=item C<X<How to use the X infix | infix,X>> (This a special case, which
+=item C<X<How to use the Z infix | infix,Z>> (This a special case, which
 is always considered a definition)
-=item C<The X Infix>
-=item C<The C<X> Infix>
-=item C<Infix X>
-=item C<Infix C<X>>
+=item C<The Z Infix>
+=item C<The C<Z> Infix>
+=item C<Infix Z>
+=item C<Infix C<Z>>
 =item C<trait is cached> (A special case for the L<trait|/language/functions#Traits> documentables)
 
 =end pod
