--- a/Type/Pair.pod
+++ b/Type/Pair.pod
@@ -13,7 +13,7 @@ arguments and parameters.
 X<:> X<< => >> X<:!>
 There are many syntaxes for creating C<Pair>s:
 
-    Pair.new('key','value)  # The canonical way
+    Pair.new('key','value')  # The canonical way
     'key' => 'value'        # this...
     :key<value>             # ...means the same as this
     :key<value1 value2>     # But this is  key => <value1 value2>
