remove outdated warning about lack of NFG
@JulesFM on twitter pointed this out. thanks!

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -695,9 +695,9 @@ Usage:
     chars STRING
     STRING.chars
 
-Coerces the invocant (or in sub form, its argument) to L<Str|/type/Str>, and returns the number of
-characters in the string. Characters should actually be grapheme clusters,
-though current implementations erroneously count codepoints instead.
+Coerces the invocant (or in sub form, its argument) to L<Str|/type/Str>, and returns the
+number of characters in the string. Please note that on the JVM, you currently get
+codepoints instead of graphemes.
 
     say 'møp'.chars;    # 3
 
