"lexically scoped idea of what a character is" is no longer a thing

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -141,8 +141,8 @@ Perl 6 does not have a C<length> function.  See L<chars>, L<elems>,
     multi sub    chars(str $x)   returns int
     multi method chars(Str:D:)   returns Int:D
 
-Returns the number of characters in the string in the current
-(lexically scoped) idea of what a normal character is, usually graphemes.
+Returns the number of characters in the string in graphemes. On the JVM, this
+currently erroneously returns the number of codepoints instead.
 
 =head2 method encode
 
