Mention '0' is True in Perl 6 and common pattern is simperl

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -1176,6 +1176,17 @@ system paths.
 
 =head1 Misc.
 
+=head2 C<'0'> is True
+
+Unlike Perl 5, a string containing nothing but zero ('0') is C<True>. As Perl 6
+has types in core, that makes more sense. This also means the common pattern:
+
+    ... if defined $x and length $x; # or just length() in modern perls
+
+In Perl 6 becomes a simple
+
+    ... if $x;
+
 =head2 C<dump>
 
 Gone.
