Minor edit for callable role doc

--- a/Type/Callable.pod
+++ b/Type/Callable.pod
@@ -9,8 +9,8 @@
 Role for objects which support calling them. It's used in L<Block>,
 L<Routine>, L<Sub>, L<Method>, L<Submethod> and L<Macro> types.
 
-Callables can be stored in C<&>-sigiled containers, the default type constrain
-if such a container is C<Callable>. A signature object can be used to
+Callables can be stored in C<&>-sigiled containers, the default type constraint
+of such a container is C<Callable>. A signature object can be used to
 force a check against the signature of the Callable to be stored into the
 congtainer.
 
