Update Cool.pod (#447)

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -1073,7 +1073,7 @@ C<:k> interleaves the keys, that is, the indexes:
 
 C<:kv> adds both indexes and matches:
 
-    say 'abc'.split(/b/, :v);               # (a 0 ｢b｣ c)
+    say 'abc'.split(/b/, :kv);               # (a 0 ｢b｣ c)
 
 You can only use one of the C<:k, :v, :kv, :p> adverbs in a single call
 to C<split>.
