--- a/Language/exceptions.pod
+++ b/Language/exceptions.pod
@@ -102,7 +102,7 @@ Output:
       in block <unit> at exception.p6 line 21
 
 A C<try>-block is a normal block and as such treats it's last statement as the
-return value of itself. We can therefor use it as a RHS.
+return value of itself. We can therefore use it as a RHS.
 
     say try { +"99999" } // "oh no"
     say try { +"hello" } // "oh no"
