Fixed two typos

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -204,7 +204,7 @@ Usage:
     sin NUMERIC
     NUMERIC.sin
 
-Coerces the invocant (or in the sub firm, the argument) to L<Numeric|/type/Numeric>, interprets it as radians,
+Coerces the invocant (or in the sub form, the argument) to L<Numeric|/type/Numeric>, interprets it as radians,
 returns its L<sine|https://en.wikipedia.org/wiki/Sine>.
 
     say sin(0);             # 0
@@ -227,7 +227,7 @@ Usage:
     asin NUMERIC
     NUMERIC.asin
 
-Coerces the invocant (or in the sub firm, the argument) to L<Numeric|/type/Numeric>, and returns its
+Coerces the invocant (or in the sub form, the argument) to L<Numeric|/type/Numeric>, and returns its
 L<arc-sine|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
 radians.
 
