Adjust doc for ord to indicate it returns *first* code point. (#448)
Adjusted doc for ord so that it indicates that it returns the *first*
code point.

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -651,9 +651,10 @@ Usage:
     ord STRING
     STRING.ord
 
-Coerces the invocant (or in sub form, its argument) to L<Str|/type/Str>, and returns the
-L<Unicode code point|https://en.wikipedia.org/wiki/Code_point>,
-number of the code point.
+Coerces the invocant (or in sub form, its argument) to
+L<Str|/type/Str>, and returns the L<Unicode code
+point|https://en.wikipedia.org/wiki/Code_point> number of the first
+code point.
 
     say 'a'.ord;            # 97
 
