The Future of Ecosystem
Organize the plan for current work needed on 6PAN

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -464,6 +464,29 @@ know where to look for the module file(s).
 You can find a list of modules and tools that aim to improve the experience of
 writing/test modules at L<Modules Extra|/language/modules-extra>
 
+=head1 The Future of Ecosystem
+
+L<http://modules.perl6.org> and github-based infrastructure is temporary. The
+plan is to establish something similar to Perl 5's PAUSE/CPAN/MetaCPAN
+infrastructure. B<Volunteers needed!>
+
+The rough plan is:
+
+	    1. fix EVAL precomp bug (nine)
+	    2. get Repository API straight
+	    3. get zef up to speed
+	    4. continue with the metacpan fork for perl6 (jdv79)
+
+The repository with jdv's fork can be found at L<https://github.com/jdv/metacpan-web>
+
+You can also already upload your Perl 6 modules to
+L<Perl 5's PAUSE|https://pause.perl.org/>, selecting `Perl6` directory during the
+upload. That will ensure your module is indexed in Perl 6's space and not Perl 5's.
+
+
+
+
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
