--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -483,9 +483,13 @@ You can also already upload your Perl 6 modules to
 L<Perl 5's PAUSE|https://pause.perl.org/>, selecting `Perl6` directory during the
 upload. That will ensure your module is indexed in Perl 6's space and not Perl 5's.
 
+=head2 Contact Information
 
-
-
+To help out or learn more, join the dedicated channel
+L<#perl6-toolchain on irc.freenode.net|irc://irc.freenode.net/#perl6-toolchain>
+L<(channel logs)|http://irclog.perlgeek.de/perl6-toolchain/today>. A repository
+to discuss tooling issues is also available at
+L<https://github.com/perl6/toolchain-bikeshed>
 
 =end pod
 
