Added documentation for sech and asech to Cool.pod

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -502,6 +502,40 @@ Usage:
 Coerces the invocant (or in method form, its argument) to L<Numeric|/type/Numeric>, and returns its
 L<Inverse tangens hyperbolicus|https://en.wikipedia.org/wiki/Inverse_hyperbolic_function>.
 
+=head2 routine sech
+
+Defined as:
+
+    sub sech(Numeric(Cool))
+    method sech()
+
+Usage:
+
+    sech NUMERIC
+    NUMERIC.sech
+
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
+L<Secant hyperbolicus|https://en.wikipedia.org/wiki/Hyperbolic_function>.
+
+    say 0.sech;                  # 1
+
+=head2 routine asech
+
+Defined as:
+
+    sub asech(Numeric(Cool))
+    method asech()
+
+Usage:
+
+    asech NUMERIC
+    NUMERIC.asech
+
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
+L<Inverse hyperbolic secant|https://en.wikipedia.org/wiki/Hyperbolic_function>.
+
+    say 0.8.asech;                  # 0.693147180559945
+
 =head2 routine log
 
 Defined as:
