Added documentation for cosech, acosech, cotanh and acotanh

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -536,9 +536,75 @@ L<Inverse hyperbolic secant|https://en.wikipedia.org/wiki/Hyperbolic_function>.
 
     say 0.8.asech;                  # 0.693147180559945
 
-=head2 routine log
+=head2 routine cosech
 
 Defined as:
+
+    sub cosech(Numeric(Cool))
+    method cosech()
+
+Usage:
+
+    cosech NUMERIC
+    NUMERIC.cosech
+
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
+L<Hyperbolic cosecant|https://en.wikipedia.org/wiki/Hyperbolic_function>.
+
+    say cosech(pi/2);                # 0.434537208094696
+
+=head2 routine acosech
+
+Defined as:
+
+    sub acosech(Numeric(Cool))
+    method acosech()
+
+Usage:
+
+    acosech NUMERIC
+    NUMERIC.acosech
+
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
+L<Inverse hyperbolic cosecant|https://en.wikipedia.org/wiki/Inverse_hyperbolic_function>.
+
+    say acosech(4.5);                  # 0.220432720979802
+
+=head2 routine cotanh
+
+Defined as:
+
+    sub cotanh(Numeric(Cool))
+    method cotanh()
+
+Usage:
+
+    cotanh NUMERIC
+    NUMERIC.cotanh
+
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
+L<Hyperbolic cotangent|https://en.wikipedia.org/wiki/Hyperbolic_function>.
+
+    say cotanh(pi);                   # 1.00374187319732
+
+=head2 routine acotanh
+
+Defined as:
+
+    sub acotanh(Numeric(Cool))
+    method acotanh()
+
+Usage:
+
+    acotanh NUMERIC
+    NUMERIC.acotanh
+
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
+L<Inverse hyperbolic cotangent|https://en.wikipedia.org/wiki/Inverse_hyperbolic_function>.
+
+    say acotanh(2.5);                  # 0.423648930193602
+
+=head2 routine log
 
 Defined as:
 
